build/log/idf_py_stdout_output_19344
[1/12] cmd.exe /C "cd /D C:\XingNian\GeRen\EspWifiNetworkConfig\build && C:\Espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.0.2/components/spiffs/spiffsgen.py 0x200000 C:/XingNian/GeRen/EspWifiNetworkConfig/spiffs C:/XingNian/GeRen/EspWifiNetworkConfig/build/storage.bin --page-size=256 --obj-name-len=32 --meta-len=4 --use-magic --use-magic-len"
[2/12] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\XingNian\GeRen\EspWifiNetworkConfig\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.0.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/XingNian/GeRen/EspWifiNetworkConfig/build/bootloader/bootloader.bin"
Bootloader binary size 0x79d0 bytes. 0x630 bytes (5%) free.
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/http_server.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/http_server.c.obj 
ccache C:\Espressif\tools\xtensa-esp32s3-elf\esp-2022r1-11.2.0\xtensa-esp32s3-elf\bin\xtensa-esp32s3-elf-gcc.exe -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -IC:/XingNian/GeRen/EspWifiNetworkConfig/build/config -IC:/XingNian/GeRen/EspWifiNetworkConfig/main -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/port/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/port/esp32s3/private_include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/soc/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/soc/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/hal/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/include/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/xtensa/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/port/esp32/include/arch -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_wifi/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_phy/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_phy/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_netif/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_http_server/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/http_parser -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_partition/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/json/cJSON -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/spiffs/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=C:/XingNian/GeRen/EspWifiNetworkConfig=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.0.2=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.2-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/http_server.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\http_server.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/http_server.c.obj -c C:/XingNian/GeRen/EspWifiNetworkConfig/main/http_server.c
In file included from C:/XingNian/GeRen/EspWifiNetworkConfig/main/http_server.c:16:
C:/XingNian/GeRen/EspWifiNetworkConfig/main/http_server.h:13: warning: "FILE_PATH_MAX" redefined
   13 | #define FILE_PATH_MAX (ESP_VFS_PATH_MAX + 128)
      | 
C:/XingNian/GeRen/EspWifiNetworkConfig/main/http_server.h:12: note: this is the location of the previous definition
   12 | #define FILE_PATH_MAX (128)  // 直接使用固定值
      | 
C:/XingNian/GeRen/EspWifiNetworkConfig/main/http_server.c: In function 'root_get_handler':
C:/XingNian/GeRen/EspWifiNetworkConfig/main/http_server.h:13:24: error: 'ESP_VFS_PATH_MAX' undeclared (first use in this function)
   13 | #define FILE_PATH_MAX (ESP_VFS_PATH_MAX + 128)
      |                        ^~~~~~~~~~~~~~~~
C:/XingNian/GeRen/EspWifiNetworkConfig/main/http_server.c:24:19: note: in expansion of macro 'FILE_PATH_MAX'
   24 |     char filepath[FILE_PATH_MAX];
      |                   ^~~~~~~~~~~~~
C:/XingNian/GeRen/EspWifiNetworkConfig/main/http_server.h:13:24: note: each undeclared identifier is reported only once for each function it appears in
   13 | #define FILE_PATH_MAX (ESP_VFS_PATH_MAX + 128)
      |                        ^~~~~~~~~~~~~~~~
C:/XingNian/GeRen/EspWifiNetworkConfig/main/http_server.c:24:19: note: in expansion of macro 'FILE_PATH_MAX'
   24 |     char filepath[FILE_PATH_MAX];
      |                   ^~~~~~~~~~~~~
C:/XingNian/GeRen/EspWifiNetworkConfig/main/http_server.c:24:10: warning: unused variable 'filepath' [-Wunused-variable]
   24 |     char filepath[FILE_PATH_MAX];
      |          ^~~~~~~~
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
In file included from C:/XingNian/GeRen/EspWifiNetworkConfig/main/main.c:16:
C:/XingNian/GeRen/EspWifiNetworkConfig/main/http_server.h:13: warning: "FILE_PATH_MAX" redefined
   13 | #define FILE_PATH_MAX (ESP_VFS_PATH_MAX + 128)
      | 
C:/XingNian/GeRen/EspWifiNetworkConfig/main/http_server.h:12: note: this is the location of the previous definition
   12 | #define FILE_PATH_MAX (128)  // 直接使用固定值
      | 
ninja: build stopped: subcommand failed.
